# phoenix-and-pepper

./: LICENSE  README.md  additional_ideas.md  docker-compose.yml  main.py  master_plan.md  pyproject.toml
.github/workflows/: ci.yml
data/: cargo_types.jsonl  customers.jsonl  order_lines.jsonl  orders.jsonl  ports.jsonl  routes.jsonl  ship_types.jsonl  ships.jsonl  voyage_costs.jsonl  voyage_manifest.jsonl  voyages.jsonl
docs/: notae-apparendi.md  notae-continentis.md  notae-interrogandi.md  notae-schematis.md  notae-serendi.md  trade_map.html
notebooks/: phoenix_and_pepper_intro.ipynb  revenue_is_not_profit.ipynb
scripts/: create_tables.py  generate_erd.py  seed_database.py
src/: agent_simulator.py  map.py  models.py  seed.py
tests/: test_cargo_types.py  test_customers.py  test_models.py  test_orders.py  test_seed_ports.py  test_seed_routes.py  test_seed_ship_and_type.py  test_voyages.py
