[project]
name = "phoenix-and-pepper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "folium>=0.20.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "graphviz>=0.21",
    "jupyter>=1.1.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 79
exclude = ["data/"]
